--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ main .booking .banner {
     height: 100%;
     flex-direction: column;
     box-shadow: 4px 0 10px 10px rgba(0, 0, 0, 0.15);
-    z-index: 1;
+    z-index: 11;
     display: none;
 }
 
@@ -327,4 +327,14 @@ main .booking .banner {
 
 .header_page .sub-menu a:first-child {
     margin-top: 6em;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+    z-index: 1;
 }
